--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -2,4 +2,5 @@ body{
     background-color: lavender; }
     h1{
         color: linen;  background-color: lightpink; }
-
+ <style> <a href="https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6#:~:text=There's%20no%20picking%20and%20choosing,Hold%20On%2C%20Pain%20Ends%3A%20H.O.P.E." <text-decoration:none >
+ </style>
