--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -4,5 +4,5 @@ body{
 
     
 
- <style> <a text-decoration:none "https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6#:~:text=There's%20no%20picking%20and%20choosing,Hold%20On%2C%20Pain%20Ends%3A%20H.O.P.E."> 
+ <style a text-decoration:none> "https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6#:~:text=There's%20no%20picking%20and%20choosing,Hold%20On%2C%20Pain%20Ends%3A%20H.O.P.E."> 
  </style>
