--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -1,7 +1,7 @@
 body{
     background-color: lavender; }
  
- <style> a text-decoration:none </style>
+ style> a text-decoration:none /style>
 
  footer{
-     background-color: lightpink;
+     background-color: lightpink; }
