--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -1,7 +1,8 @@
 body{
     background-color: lavender; }
  
- style> a text-decoration:none /style>
+a{ text-decoration:none; 
+}
 
  footer{
      background-color: lightpink; }
