--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -1,8 +1,9 @@
 body{
     background-color: lavender; }
  
-a{ text-decoration:none; 
-}
+a{
+ text-decoration:none; }
+
 
  footer{
      background-color: lightpink; }
