--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -1,7 +1,10 @@
 body{
     background-color: lavender; }
  
-a{
+body{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 18px;}
+
+ a{
  text-decoration:none; }
 
 
