--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -13,3 +13,8 @@ body{
 
      a:hover{
         color: steelblue; }
+       
+        div{
+            background-color: thistle; }
+        
+            
