--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -14,7 +14,7 @@ body{
      a:hover{
         color: steelblue; }
        
-        div{
-            background-color: thistle; }
+    a{
+        background-color: thistle; }
+    
         
-            
