--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -14,7 +14,8 @@ body{
      a:hover{
         color: steelblue; }
        
-    a{
-        background-color: thistle; }
+   img{
+       background-color: thistle; }
+   
     
         
