--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -15,7 +15,8 @@ body{
         color: steelblue; }
        
    img{
-       background-color: thistle; }
+       box-shadow: thistle; }
+
    
     
         
