--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -14,8 +14,9 @@ body{
      a:hover{
         color: steelblue; }
        
-   img{
-       box-shadow: thistle; }
+   a{ 
+       background-color: thistle; }
+   
 
    
     
