--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -22,8 +22,10 @@ background-color: thistle; }
     
 ul{ 
     shape-image-threshold: calc(square); }
+    
     li{
-        box-shadow: cornflowerblue; }
+        shape-image-threshold: calc(square); }
+
    
 
    
