--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -19,12 +19,8 @@ body{
    
     img :hover {
 background-color: thistle; }
+
 ul{
 
- style:=list-style-type:square; }
+ list-style: square; }
 
-   
-
-   
-    
-        
