--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -20,7 +20,8 @@ body{
     img :hover {
 background-color: thistle; }
 
-li{
-    list-style: square; }
+a li{
+    list-style: symbols(square); }
+
 
 
