--- a/html-assignment/main.css
+++ b/html-assignment/main.css
@@ -21,7 +21,10 @@ body{
 background-color: thistle; }
 
 ul{
-    list-style: square }
+    list-style-type: square; }
+li{
+    list-style-type: square; }
+
 
 
 
