--- a/midterm/css.css
+++ b/midterm/css.css
@@ -3,5 +3,12 @@ h1{
     color: white;
 }
 
-body{
+html{
+
     background-color:rgb(145, 202, 197) ;}
+
+body{ 
+
+    background-color: #aad4cf; }
+    
+
