--- a/midterm/css.css
+++ b/midterm/css.css
@@ -5,10 +5,10 @@ h1{
 
 html{
 
-    background-color:rgb(145, 202, 197) ;}
+    color:rgb(145, 202, 197) ;}
 
 body{ 
 
-    background-color: #aad4cf; }
+    color: #aad4cf; }
     
 
