--- a/midterm/css.css
+++ b/midterm/css.css
@@ -6,10 +6,11 @@ h1{
 
 body{ 
 
-    color: #aad4cf; }
+    background-color:rgb(145, 202, 197; 
+}
     
 
-    html{
+html{
 
-        background-color:rgb(145, 202, 197) ;}
-    
+}
+        
