--- a/midterm/css.css
+++ b/midterm/css.css
@@ -3,10 +3,6 @@ h1{
     color: white;
 }
 
-
-body{ 
-
-    background-color:rgb(145, 202, 197; 
+body{
+    background-color:aquamarine
 }
-    
-        
