--- a/midterm/css.css
+++ b/midterm/css.css
@@ -11,11 +11,12 @@ h1{
     color: white
 }
 
-div h1{
+div h1{ 
+    position: relative; right: 50px;
 
 }
 
 div{
     position: relative; 
-    right: 30px;
+   
 }
