--- a/midterm/css.css
+++ b/midterm/css.css
@@ -1,6 +1,8 @@
 
 body{
     background-color: #aad4cf;
+     margin: auto;
+     width: 1332px;
 }
 
 html{
@@ -8,24 +10,36 @@ html{
 }
 
 h1{
-    color: white
-}
-
-div h1{ 
-    position: relative; right: 500px;
-
-}
-
-div{
-    position: absolute;
-transform: translate(-50,-50
-top: 100%;
-left: 100%;
-   
-}
-
-nav{
+    position: relative; top: 270px;
+    color: white;
+    text-align: center;
+    z-index: 10;
     
 }
 
+.table li{ 
+list-style: none; 
+float: left;
+width: 33%;
+text-align: center;
+}
 
+.table li:not(:first-child){
+border-left: black 1px solid;
+
+}
+
+.star{ 
+    position: relative; top: -70px;
+width: 100%;
+
+}
+
+.smallstar{
+    float:left;
+    width: 400px;
+}
+
+h3{
+    clear: both;
+}
